--- a/500.html
+++ b/500.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta charset="UTF-8">
-<title>内部服务器错误!</title>
-<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
-<meta content="yes" name="apple-mobile-web-app-capable">
-<meta content="black" name="apple-mobile-web-app-status-bar-style">
-<meta name="format-detection" content="telephone=no"> 
-<meta name="apple-touch-fullscreen" content="yes">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<link rel="stylesheet" href="css/style.css">
+<html>
+<head> 
+	<meta name="viewport" content="width=device-width; initial-scale=1.0,user-scalable=no,maximum-scale=1.0,minimun-scale=1.0">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/common.css">
+    <title>内部服务器错误！</title>
 </head>
-<body style="background:#f2f2f2;">
-	<section class="notfound">
-		<strong>Sorry!</strong>
-		<span>内部服务器错误！</span>
-		<em></em>
-	</section>
+
+<body>
+	<div class="nfound">
+		<div class="nfound-txt">
+			<p class="nf-fs1">Sorry!</p>
+			<p class="nf-sorry">抱歉，内部服务器错误！</p>
+			<p>请检查输入的网址是否正确。</p>
+			<p>或者联系第一舞台客服：400-888-8888</p>
+		</div>
+		<div class="nfound-img">
+			<img src="images/notfoundimg.png" alt="你访问的页面不存在">
+		</div>
+	</div>
 </body>
-</html>
+</html>    
