--- a/task.html
+++ b/task.html
@@ -17,24 +17,29 @@
 			<div class="warp swiper-container">
 				<div class="issue swiper-wrapper " id="issue">
 					<div class="cnt swiper-slide swiper-slide-visible swiper-slide-active det">
-				 		<div class="inp1"><label>活动名称：</label> <span class="act-det">第二届京剧交流会</span></div>
-				 		<div class="inp1"><label>活动时间：</label> <span class="act-det">2015-12-30 09:30</span></div>
+				 		<div class="inp1"><label>通告名称：</label> <span class="act-det">第二届京剧交流会</span></div>
+				 		<div class="inp1"><label>通告时间：</label> <span class="act-det">2015-12-30 09:30</span></div>
 				 		<div class="inp1"><label>应征时间：</label> <span class="act-det">2015-12-10 09:30</span> </div>
-				 		<div class="inp1"><label>活动城市：</label> <span class="act-det">浙江省杭州市西湖区</span></div>	
-				 		<div class="inp1"><label>活动地点：</label> <span class="act-det">成都北路500号峻岭广场30楼3002室</span></div>			
+				 		<div class="inp1"><label>通告城市：</label> <span class="act-det">浙江省杭州市西湖区</span></div>	
+				 		<div class="inp1"><label>通告地点：</label> <span class="act-det">成都北路500号峻岭广场30楼3002室</span></div>			
+				 		<div class="inp1"><label>备注：</label> <span class="act-det">离西湖区较近处</span></div>			
 						<div class="role-list">
 							<strong>角色列表</strong>
 							<ul>
 								<li class="list">
-									<div class="role-title"><span>钢琴</span><span>2人</span><span>1000元/人</span><span>女</span><a href="javascript:void(0);" class="yz">应征</a></div>
+									<div class="role-title"><span>钢琴</span><span>2人(女)</span><span>1000元/人</span><a href="javascript:;" class="yz">应征</a></div>
 									<div>备注：有过5次以上中型的演出经验，能在众多观众面前临危不乱，着装整洁，无不良嗜好，身体状况良好。</div>
 								</li>
 								<li class="list">
-									<div class="role-title"><span>大提琴</span><span>3人</span><span>5000元/人</span><span>不限</span><a href="javascript:void(0);" class="yz">应征</a></div>
+									<div class="role-title"><span>动画/儿童剧配音</span><span>100人(不限)</span><span>1000元/人</span><a href="javascript:;" class="yz">应征</a></div>
 									<div>备注：有过5次以上中型的演出经验，能在众多观众面前临危不乱，着装整洁，无不良嗜好，身体状况良好。</div>
 								</li>
 								<li class="list">
-									<div class="role-title"><span>小提琴</span><span>5人</span><span>10000元/人</span><span>女</span><a href="javascript:void(0);" class="yz">应征</a></div>
+									<div class="role-title"><span>钢琴</span><span>12人(男)</span><span>20000元/人</span><a href="javascript:;" class="yz">应征</a></div>
+									<div>备注：有过5次以上中型的演出经验，能在众多观众面前临危不乱，着装整洁，无不良嗜好，身体状况良好。</div>
+								</li>
+								<li class="list">
+									<div class="role-title"><span>钢琴</span><span>2人(女)</span><span>1000元/人</span><a href="javascript:;" class="yz">应征</a></div>
 									<div>备注：有过5次以上中型的演出经验，能在众多观众面前临危不乱，着装整洁，无不良嗜好，身体状况良好。</div>
 								</li>
 							</ul>
