--- a/reg_company2.html
+++ b/reg_company2.html
@@ -29,7 +29,7 @@
 				<span>广告|公关</span>
 				<span>婚庆|会展</span>
 				<span>演艺</span>
-				<span class="active">剧团</span>
+				<span>剧团</span>
 				<span>影视制作</span>
 				<span>文化传媒</span>
 				<span>多媒体</span>
@@ -80,6 +80,7 @@
 		</form>
 	</div>
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script> 
+	<script src="js/roleList.js"></script>
 	<script src="js/upload.js"></script>
 	<script type="text/javascript" src="js/common.js"></script>
 	<script src="js/unload_sc.js"></script>
