--- a/task-add2.html
+++ b/task-add2.html
@@ -131,7 +131,6 @@
 <script src="js/jquery-1.8.3.min.js"></script> 
 <script src="js/mui.min.js"></script>
 <script src="js/mui.picker.min.js"></script>
-<script src="js/city.data.js"></script>
 <script src="js/city.data-3.js"></script>
 <script src="js/common.js"></script>
 
@@ -146,6 +145,9 @@
 		}, {
 			value: '2',
 			text: '女'
+		}, {
+			value: '3',
+			text: '不限'
 		}]);
 		var showUserPickerButton = doc.getElementById('showUserPicker');
 		showUserPickerButton.addEventListener('tap', function(event) {
