--- a/artist-add.html
+++ b/artist-add.html
@@ -25,7 +25,7 @@
 				 			<li><div class="inp1"><label>出生年月：</label> <div class="in relative"><!-- <input type="date" class="time-x">
 						 			<input type="text" class="activeTime"> -->
 						 			<span class="date-rl"></span>
-						 			<button id='demo1' data-options='{}' class="btn mui-btn mui-btn-block cbrith">2015-01-01 00:00</button>
+						 			<button id='demo1' data-options='{"type":"date"}' class="btn mui-btn mui-btn-block cbrith">2015-01-01</button>
 						 		</div> 
 			 				*</div></li>
 				 			<li><div class="inp1"><label>所在地：</label> <div class="in"><button id='showCityPicker' class="mui-btn mui-btn-block caddress" type='button'>请选择城市...</button> </div></div></li>
