--- a/artist.html
+++ b/artist.html
@@ -36,19 +36,21 @@
 						</div>
 
 						<div id="artistList">
-					 		<ul class="list">
-					 			<li><span>艺人名称</span><em>周杰伦</em></li>
-					 			<li><span>所在地</span><em>台湾新北</em></li>
-					 			<li><span>生日</span><em>01月18日</em></li>
-					 			<li><span>手机</span><em>13566421458</em></li>
-					 			<li><span>Email</span><em>jsonhuo@163.com</em></li>
-					 			<li><span>身高</span><em>178CM</em></li>
-					 			<li><span>三围</span><em>50*30*20</em></li>
-					 			<li><span>体重</span><em>70KG</em></li>
-					 			<li><span>血型</span><em>B</em></li>
-					 			<li class="bbn"><span>简介</span><em class="intro">周杰伦（Jay Chou），1979年1月18日出生于台湾新北市。华语男歌手、词曲创作人、制作人、演员、导演、编剧及监制。</em></li>
-					 		</ul>
-					 		<a class="telescopic" href="javascript:void(0)">点击收缩</a>
+							<div class="list_outer">
+						 		<ul class="list">
+						 			<li><span>艺人名称</span><em>周杰伦</em></li>
+						 			<li><span>所在地</span><em>台湾新北</em></li>
+						 			<li><span>生日</span><em>01月18日</em></li>
+						 			<li><span>手机</span><em>13566421458</em></li>
+						 			<li><span>Email</span><em>jsonhuo@163.com</em></li>
+						 			<li><span>身高</span><em>178CM</em></li>
+						 			<li><span>三围</span><em>50*30*20</em></li>
+						 			<li><span>体重</span><em>70KG</em></li>
+						 			<li><span>血型</span><em>B</em></li>
+						 			<li class="bbn"><span>简介</span><em class="intro">周杰伦（Jay Chou），1979年1月18日出生于台湾新北市。华语男歌手、词曲创作人、制作人、演员、导演、编剧及监制。</em></li>
+						 		</ul>
+					 		</div>
+					 		<a class="telescopic" href="javascript:void(0)">点击展开</a>
 				 		</div>
 
 				 		<div class="artistprice">
