--- a/nav.html
+++ b/nav.html
@@ -12,10 +12,10 @@
 </head>
 <body style="background:#f2f2f2;">
 	<section class="sec_list">
-		<aside><span>艺人</span></aside>
-		<aside><span>企业</span></aside>
-		<aside><span>经纪人</span></aside>
-		<aside><span>观众</span></aside>	
+		<aside><a href="register_gz.html"><span>艺人</span></a></aside>
+		<aside><a href="reg_company1.html"><span>企业</span></a></aside>
+		<aside><a href="reg_jjr1.html"><span>经纪人</span></a></aside>
+		<aside><a href="register_gz.html"><span>观众</span></a></aside>	
 	</section>	
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script> 
 	<script type="text/javascript" src="js/common.js"></script>
