--- a/reg_company2.html
+++ b/reg_company2.html
@@ -45,6 +45,7 @@
 		 				<div class="imgload">
 						    <div class="imgview  adDWXBgIMG  margin-top-20">
 						        <span><img id="img" src="images/cross.png"></span>
+						        <p>营业执照</p>
 						    </div>
 						    <div id="error" class="help-block text-center"></div>
 						    <div class="btn-box margin-top-20">
@@ -61,6 +62,7 @@
 		 				<div class="imgload">
 						    <div class="imgview  adDWXBgIMG  margin-top-20">
 						        <span><img id="imgx" src="images/cross.png"></span>
+						        <p>身份证</p>
 						    </div>
 						    <div id="errorx" class="help-block text-center"></div>
 						    <div class="btn-box margin-top-20">
