--- a/entrust.html
+++ b/entrust.html
@@ -28,13 +28,13 @@
 			 		<div class="inp1"><label>开始时间：</label><div class="in relative"><!-- <input type="date" class="time-x">
 			 			<input type="text" class="activeTime"> -->
 			 			<span class="date-rl"></span>
-			 			<button id='demo1' data-options='{}' class="btn mui-btn mui-btn-block">2015-01-01 00:00</button>
+			 			<button id='demo1' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block">2015-01-01 00:00</button>
 			 		</div> *</div>
 
 			 		<div class="inp1"><label>结束时间：</label><div class="in relative"><!-- <input type="date" class="time-x">
 			 			<input type="text" class="activeTime"> -->
 			 			<span class="date-rl"></span>
-			 			<button id='demo2' data-options='{}' class="btn mui-btn mui-btn-block">2015-01-01 00:00</button>
+			 			<button id='demo2' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block">2015-01-01 00:00</button>
 			 		</div> *</div>	
 
 			 		<div class="inp1 clearfix"><label>活动城市：</label><div class="in"><button id='showCityPicker' class="mui-btn mui-btn-block" type='button'>请选择城市...</button></div>
@@ -58,6 +58,24 @@
 		  	</div>
 		</form>
     </div>
+	<nav class="mui-bar mui-bar-tab menu">
+		<a class="mui-tab-item mui-active" href="#tabbar">
+			<span class="mui-icon mui-icon-home"></span>
+			<span class="mui-tab-label">首页</span>
+		</a>
+		<a class="mui-tab-item" href="#tabbar-with-chat">
+			<span class="mui-icon mui-icon-email"><span class="mui-badge">9</span></span>
+			<span class="mui-tab-label">发通告</span>
+		</a>
+		<a class="mui-tab-item" href="#tabbar-with-contact">
+			<span class="mui-icon mui-icon-star"></span>
+			<span class="mui-tab-label">艺人</span>
+		</a>
+		<a class="mui-tab-item" href="#tabbar-with-map">
+			<span class="mui-icon mui-icon-contact"></span>
+			<span class="mui-tab-label">我的</span>
+		</a>
+	</nav>
 </section>
     
 
