--- a/reg_company2.html
+++ b/reg_company2.html
@@ -77,10 +77,29 @@
 				</div>
 				
 				<div class="h-descript">(图片清晰，图片为正方形，平台为用户保密)</div>
-				<div><a href="javascript:void(0);" class="reg-btn company-com">完 成</a><div>
+				<div><a href="javascript:void(0);" class="reg-btn company-com">完 成</a></div>
 			</div>
 		</form>
 	</div>
+
+	<nav class="mui-bar mui-bar-tab menu">
+		<a class="mui-tab-item mui-active" href="#tabbar">
+			<span class="mui-icon mui-icon-home"></span>
+			<span class="mui-tab-label">首页</span>
+		</a>
+		<a class="mui-tab-item" href="#tabbar-with-chat">
+			<span class="mui-icon mui-icon-email"><span class="mui-badge">9</span></span>
+			<span class="mui-tab-label">发通告</span>
+		</a>
+		<a class="mui-tab-item" href="#tabbar-with-contact">
+			<span class="mui-icon mui-icon-star"></span>
+			<span class="mui-tab-label">艺人</span>
+		</a>
+		<a class="mui-tab-item" href="#tabbar-with-map">
+			<span class="mui-icon mui-icon-contact"></span>
+			<span class="mui-tab-label">我的</span>
+		</a>
+	</nav>
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script> 
 	<script src="js/roleList.js"></script>
 	<script src="js/upload.js"></script>
