--- a/task-add2.html
+++ b/task-add2.html
@@ -106,6 +106,24 @@
 			</div>
 		</form>
 	</div>
+	<nav class="mui-bar mui-bar-tab menu">
+		<a class="mui-tab-item mui-active" href="#tabbar">
+			<span class="mui-icon mui-icon-home"></span>
+			<span class="mui-tab-label">首页</span>
+		</a>
+		<a class="mui-tab-item" href="#tabbar-with-chat">
+			<span class="mui-icon mui-icon-email"><span class="mui-badge">9</span></span>
+			<span class="mui-tab-label">发通告</span>
+		</a>
+		<a class="mui-tab-item" href="#tabbar-with-contact">
+			<span class="mui-icon mui-icon-star"></span>
+			<span class="mui-tab-label">艺人</span>
+		</a>
+		<a class="mui-tab-item" href="#tabbar-with-map">
+			<span class="mui-icon mui-icon-contact"></span>
+			<span class="mui-tab-label">我的</span>
+		</a>
+	</nav>
 </section>	
 
 <div class="mask"></div>
@@ -125,7 +143,7 @@
 	<div class="inp1"><label>人数：</label><input type="number" class="perNum"> *</div>
 	<div class="inp1"><label>单人预算：</label><input type="number" class="yen"> 元 *</div>
 	<div class="inp1"><label>备注：</label><textarea class="tea1 bz-1"></textarea></div>
-	<div class="t-center"><a href="javascript:void(0);" class="save-btn">保存</a></div>
+	<div class="t-center special"><a href="javascript:void(0);" class="save-btn">保存</a></div>
 </div>
 
 <script src="js/jquery-1.8.3.min.js"></script> 
