--- a/reg_company1.html
+++ b/reg_company1.html
@@ -21,7 +21,7 @@
 	<div class="mui-content reg_gz">
 		<form id='login-form' class="mui-input-group">
 			<div class="mui-input-row"><em class="tel"></em><input type="text" class="mui-input-clear mui-input company-tel" placeholder="请输入手机号"></div>
-			<div class="mui-input-row"><em class="chk"></em><input type="text" class="mui-input-clear mui-input company-chk" placeholder="请输入验证码"></div>
+			<div class="mui-input-row"><em class="chk"></em><input type="text" class="mui-input-clear mui-input company-chk" placeholder="请输入验证码"><a href="javascript:;" class="publish-yz com-pub" data-flag="true">发送验证码</a></div>
 			<div class="mui-input-row"><em class="psw"></em><input type="password" class="mui-input-clear mui-input company-psw" placeholder="请输入6-12位密码"></div>
 			<div class="mui-input-row"><em class="psw"></em><input type="password" class="mui-input-clear mui-input company-cpsw" placeholder="请再次输入密码"></div>
 			<div class="mui-input-row"><em class="eml"></em><input type="text" class="mui-input-clear mui-input h-mail company-mail" placeholder="请输入邮箱地址"></div>
@@ -51,5 +51,6 @@
 	</nav>
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script> 
 	<script type="text/javascript" src="js/register.js"></script>
+	<script type="text/javascript" src="js/common.js"></script>
 </body>
 </html>
