--- a/task-add2.html
+++ b/task-add2.html
@@ -24,6 +24,7 @@
 				 	<div class="cnt swiper-slide">
 				 		<div class="role">
 							<table width="100%" cellpadding="0" cellspacing="0" border="0" id="tab11">
+								
 								<tr>
 									<td width="20%" align="right">角色：</td>
 									<td width="30%" class="r1">舞蹈</td>
@@ -43,6 +44,9 @@
 									<td width="80%" colspan="3" class="pr20 r5">			
 									4名男生均身高175cm以上，气质佳。
 									</td>
+								</tr>
+								<tr>
+									<td><span class="delete-btn">删除</span></td>
 								</tr>
 
 							</table>
@@ -69,6 +73,10 @@
 									</td>
 								</tr>
 
+								<tr>
+									<td><span class="delete-btn">删除</span></td>
+								</tr>
+
 							</table>
 							
 							<table width="100%" cellpadding="0" cellspacing="0" border="0" id="tab33">
@@ -91,6 +99,9 @@
 									<td width="80%" colspan="3" class="pr20 r5">				
 									自备乐器，离杨浦区较近。
 									</td>
+								</tr>
+								<tr>
+									<td><span class="delete-btn">删除</span></td>
 								</tr>
 
 							</table>
