--- a/artist.html
+++ b/artist.html
@@ -56,9 +56,9 @@
 				 		<div class="artistprice">
 				 			<h3><strong>价目表</strong> <span>(3)</span></h3>
 				 			<ul>
-				 				<li><span>小提琴</span><em>2500/次</em> <a href="javascript:void(0);">预约</a></li>
-				 				<li><span>跳舞</span><em>2500/曲</em> <a href="javascript:void(0);">预约</a></li>
-				 				<li class="bbn"><span>唱歌</span><em>2500/首</em> <a href="javascript:void(0);">预约</a></li>
+				 				<li><span>小提琴</span><em>2500/次</em> <a href="javascript:void(0);" class="yuyue">预约</a></li>
+				 				<li><span>跳舞</span><em>2500/曲</em> <a href="javascript:void(0);" class="yuyue">预约</a></li>
+				 				<li class="bbn"><span>唱歌</span><em>2500/首</em> <a href="javascript:void(0);" class="yuyue">预约</a></li>
 				 			</ul>
 				 		</div>
 
@@ -126,6 +126,25 @@
 		</a>
 	</nav>
 </section>
+<div class="mask"></div>
+<div class="popbox task-role">
+	<span class="close-btn"></span>
+	<div class="role-yy">
+		<span>黄梅戏演唱</span>
+		<div>
+			<p><input type="checkbox"> 二胡</p>
+			<p><input type="checkbox"> 吉他</p>
+			<p><input type="checkbox"> 歌手</p>
+		</div>
+	</div>
+	<div class="role-yy">
+		<span>万体馆千人大合唱</span>
+		<div>
+			<p><input type="checkbox"> 二胡</p>
+			<p><input type="checkbox"> 吉他</p>
+		</div>
+	</div>
+</div>
 
 <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script> 
 <script type="text/javascript" src="js/common.js"></script>
