--- a/company.html
+++ b/company.html
@@ -21,24 +21,24 @@
 
 						<div class="art-head">
 							<div class="art-himg">
-								<img src="images/pic3.jpg">
+								<img src="images/pic6.jpg">
 								<div class="art-img-txt">
-									<!-- <span>经</span>
-									<span class="no">&radic;</span> -->
-									<span>企</span>
+									<span class="qi">企</span>
+									<!-- <span class="no">企</span> -->
 								</div>
 							</div>
-							<div class="art-name">嘉禾娱乐事业有限公司</div>
+							<div class="art-name">韩国SM娱乐有限公司</div>
 							<div class="art-fans">
-								<span>粉丝：<em>200</em></span>
-								<a href="javascript:void(0);" class="art-follow">关注</a>
+								<span>粉丝：<em>20000</em></span>
+								<!-- <a href="javascript:void(0);" class="art-follow gzing"> 已关注</a> -->
+								<a href="javascript:void(0);" class="art-follow">+关注</a>
 							</div>
 						</div>
 
 				 		<ul class="list">
-				 			<li><span>公司简介</span><em class="intro">嘉禾公司于1970年由邹文怀先生、何冠昌先生和梁风先生共同创建而成。</em></li>
+				 			<li><span>公司简介</span><em class="intro">S.M.Entertainment 是韩国一间大型艺人企划和经纪公司，由歌手出身的李秀满于1989年创办。其名称“SM”为英文“Star Museum”的缩写，意为“明星博物馆、名人殿堂”。</em></li>
 
-				 			<li><span>服务内容</span><em class="intro">1994 年成为香港的上市公司，是目前于华人市场具有影响力的电影娱乐公司。嘉禾集电影融资、发行、戏院经营及电影冲印业务为一体。</em></li>
+				 			<li><span>服务内容</span><em class="intro">1998年，S.M.公司把旗下的HOT、SES介绍到中国、日本，掀起了亚洲“韩流”热潮。</em></li>
 
 				 			<li class="bbn">
 				 				<span>联系方式：</span><em class="intro">18121131371<br />021-56848769</em>
