--- a/artist.html
+++ b/artist.html
@@ -23,15 +23,17 @@
 							<div class="art-himg">
 								<img src="images/pic3.jpg">
 								<div class="art-img-txt">
-									<span>经</span>
-									<span class="no">&radic;</span>
-									<span>企</span>
+									<span class="jing">经</span>
+									<span class="vip">V</span>
+									<span class="qi">企</span>
+									<!-- <span class="no">企</span> -->
 								</div>
 							</div>
 							<div class="art-name">周杰伦</div>
 							<div class="art-fans">
 								<span>粉丝：<em>200</em></span>
-								<a href="javascript:void(0);" class="art-follow gzing"><!-- + 关注 --> 已关注</a>
+								<!-- <a href="javascript:void(0);" class="art-follow gzing"> 已关注</a> -->
+								<a href="javascript:void(0);" class="art-follow">＋关注</a>
 							</div>
 						</div>
 
@@ -50,7 +52,7 @@
 						 			<li class="bbn"><span>简介</span><em class="intro">周杰伦（Jay Chou），1979年1月18日出生于台湾新北市。华语男歌手、词曲创作人、制作人、演员、导演、编剧及监制。</em></li>
 						 		</ul>
 					 		</div>
-					 		<a class="telescopic" href="javascript:void(0)">点击展开</a>
+					 		<a class="telescopic" href="javascript:void(0)">展开</a>
 				 		</div>
 
 				 		<div class="artistprice">
@@ -127,23 +129,28 @@
 	</nav>
 </section>
 <div class="mask"></div>
-<div class="popbox task-role">
+<div class="popbox task-role" style="display:none">
 	<span class="close-btn"></span>
-	<div class="role-yy">
-		<span>黄梅戏演唱</span>
-		<div>
-			<p><input type="checkbox"> 二胡</p>
-			<p><input type="checkbox"> 吉他</p>
-			<p><input type="checkbox"> 歌手</p>
+	<div class="role-list-radio">
+		<div class="role-yy">
+			<span>黄梅戏演唱</span>
+			<div class="list-radio">
+				<p><em class="radio-un radio-act" value="1" name="aa"></em> 二胡</p>
+				<p><em class="radio-un" value="2" name="aa"></em> 吉他</p>
+				<p><em class="radio-un" value="3" name="aa"></em> 歌手</p>
+			</div>
+		</div>
+
+		<div class="role-yy">
+			<span>万体馆千人大合唱</span>
+			<div class="list-radio">
+				<p><em class="radio-un radio-act" value="1" name="bb"></em> 二胡</p>
+				<p><em class="radio-un" value="2" name="bb"></em> 吉他</p>
+			</div>
 		</div>
 	</div>
-	<div class="role-yy">
-		<span>万体馆千人大合唱</span>
-		<div>
-			<p><input type="checkbox"> 二胡</p>
-			<p><input type="checkbox"> 吉他</p>
-		</div>
-	</div>
+
+	<a href="javascript:;" class="p-h-btn1">确定</a>
 </div>
 
 <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script> 
