--- a/artist-video.html
+++ b/artist-video.html
@@ -24,38 +24,28 @@
 			 			<div class="mui-content">
 							<div class="mui-content-padded video_list">
 								<a href="http://www.w3school.com.cn/i/movie.mp4">
-									<em></em>
+									<em class="mui-icon mui-icon-videocam"></em>
 									<span>四川峨眉山向路人求救猴王</span>
-									<div></div>
 								</a>
-
 								<a href="http://www.w3school.com.cn/i/movie.mp4">
-									<em></em>
+									<em class="mui-icon mui-icon-videocam"></em>
 									<span>感谢你们对峨眉山世界自然</span>
-									<div></div>
 								</a>
-
 								<a href="http://www.w3school.com.cn/i/movie.mp4">
-									<em></em>
+									<em class="mui-icon mui-icon-videocam"></em>								
 									<span>虽然承受了很大压力</span>
-									<div></div>
 								</a>
 								<a href="http://www.w3school.com.cn/i/movie.mp4">
-									<em></em>
+									<em class="mui-icon mui-icon-videocam"></em>								
 									<span>四川峨眉山向路人求救猴王</span>
-									<div></div>
 								</a>
-
 								<a href="http://www.w3school.com.cn/i/movie.mp4">
-									<em></em>
+									<em class="mui-icon mui-icon-videocam"></em>								
 									<span>感谢你们对峨眉山世界自然</span>
-									<div></div>
 								</a>
-
 								<a href="http://www.w3school.com.cn/i/movie.mp4">
-									<em></em>
+									<em class="mui-icon mui-icon-videocam"></em>								
 									<span>虽然承受了很大压力</span>
-									<div></div>
 								</a>
 							</div>
 						</div>
