--- a/entrust.html
+++ b/entrust.html
@@ -28,19 +28,19 @@
 			 		<div class="inp1"><label>开始时间：</label><div class="in relative"><!-- <input type="date" class="time-x">
 			 			<input type="text" class="activeTime"> -->
 			 			<span class="date-rl"></span>
-			 			<button id='demo1' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block">2015-01-01 00:00</button>
+			 			<button id='demo1' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block btn-black">2015-01-01 00:00</button>
 			 		</div> *</div>
 
 			 		<div class="inp1"><label>结束时间：</label><div class="in relative"><!-- <input type="date" class="time-x">
 			 			<input type="text" class="activeTime"> -->
 			 			<span class="date-rl"></span>
-			 			<button id='demo2' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block">2015-01-01 00:00</button>
+			 			<button id='demo2' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block btn-black">2015-01-01 00:00</button>
 			 		</div> *</div>	
 
-			 		<div class="inp1 clearfix"><label>活动城市：</label><div class="in"><button id='showCityPicker' class="mui-btn mui-btn-block" type='button'>请选择城市...</button></div>
+			 		<div class="inp1 clearfix"><label>活动城市：</label><div class="in"><button id='showCityPicker' class="mui-btn mui-btn-block btn-black" type='button'>请选择城市...</button></div>
 			 		</div>
 			 		<div class="inp1" ><label style="float:left;">活动时长：</label>
-			 			<div class="in"><button id='showUserPicker' class="mui-btn mui-btn-block" type='button'>请选择时长...</button></div>
+			 			<div class="in"><button id='showUserPicker' class="mui-btn mui-btn-block btn-black" type='button'>请选择时长...</button></div>
 
 			 			<!-- <select class="shichang" name="sc"><option value="1">2小时</option><option value="2">半天</option><option value="3">1天</option><option value="4">2天</option><option value="5">大于2天</option></select> -->
 
@@ -50,7 +50,7 @@
 					<div class="inp1"><label>手机号码：</label><input type="text" class="tel" placeholder="请输入手机号码"> *</div>
 					<div class="inp1"><label>备注：</label><textarea class="tea1 bz-2"></textarea></div>
                     <div class="btnBox">
-                     	<a href="javascript:void(0);" class="btn-xx app-btn wt-btn">委托</a>
+                     	<a href="javascript:void(0);" class="create-com wt-btn">委托</a>
                     </div>
 					</div>
 			 			
