--- a/reg-two-jjr.html
+++ b/reg-two-jjr.html
@@ -26,7 +26,7 @@
 				<div class="w-text">
 	 				<div class="imgload">
 					    <div class="imgview  adDWXBgIMG  margin-top-20">
-					        <span><img id="img" src="images/cross.png"></span>
+					        <span class="mui-icon mui-icon-camera"></span>
 					    </div>
 					    <div id="error" class="help-block text-center"></div>
 					    <div class="btn-box margin-top-20">
@@ -46,7 +46,7 @@
 			<div class="mui-input-row"><label>邮箱</label><input type="text" class="mui-input-clear mui-input jjr-mail" placeholder="请再次邮箱"></div>
 			<div class="mui-input-row txta"><label>简介</label><textarea class="txt_area"></textarea></div>
 			<div class="agree">
-				<p class="jwarning">少于5个艺人不能应征不能发任务！</p>
+				<p class="jwarning mui-icon mui-icon-info">少于5个艺人不能应征不能发任务！</p>
 				<div><a href="#" class="reg-btn jjr-btn">完 成</a><div>
 			</div>
 		</form> 
