--- a/task-add.html
+++ b/task-add.html
@@ -23,7 +23,7 @@
 				 		<div class="inp1"><label>演出时间：</label>
 				 			<div class="in relative">
 				 				<span class="date-rl"></span>
-				 				<button id='s-date' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block">2016-01-01 09:00</button></div>
+				 				<button id='s-date' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block btn-black">2016-01-01 09:00</button></div>
 				 		<!-- <div class="in"><input type="date" id="date-x1">
 				 			<input type="text" id="s-date">
 				 		</div> --> *</div>
@@ -31,7 +31,7 @@
 				 		<div class="inp1"><label>应征开始：</label>
 				 			<div class="in relative">
 				 				<span class="date-rl"></span>	
-				 				<button id='e-date' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block">2016-01-01 09:00</button></div>
+				 				<button id='e-date' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block btn-black">2016-01-01 09:00</button></div>
 				 		<!-- <div class="in"><input type="date" id="date-x2">
 				 			<input type="text" id="e-date" >
 				 		</div> --> *</div>
@@ -39,19 +39,18 @@
 				 		<div class="inp1"><label>应征结束：</label>
 				 			<div class="in relative">
 				 				<span class="date-rl"></span>	
-				 				<button id='e-date2' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block">2016-01-01 09:00</button></div>
+				 				<button id='e-date2' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block btn-black">2016-01-01 09:00</button></div>
 				 		<!-- <div class="in"><input type="date" id="date-x2">
 				 			<input type="text" id="e-date" >
 				 		</div> --> *</div>
 
 				 		<div class="inp1 clearfix"><label>演出城市：</label>
-				 			<div class="in"><button id='showCityPicker3' class="mui-btn mui-btn-block" type='button'>请选择城市...</button></div>
+				 			<div class="in"><button id='showCityPicker3' class="mui-btn mui-btn-block btn-black" type='button'>请选择城市...</button></div>
 				 		</div>	
 				 		<div class="inp1"><label>演出地点：</label><input type="text" id="x-address" placeholder="请填写演出的具体地址"> *</div>			
-						<div class="btnBox"><a href="javascript:void(0);" class="btn-xx app-btn nextPage">下一页</a></div>
+						<div class="btnBox"><a href="javascript:void(0);" class="create-com nextPage">下一页</a></div>
 					</div>		
 				</div>
-				
 			</div>
 		</form>
     </div>
