--- a/task-our.html
+++ b/task-our.html
@@ -44,7 +44,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="btnBox"><a href="javascript:void(0);" id='confirmBtn' class="btn-xx app-btn">关闭活动</a></div>
+						<div class="btnBox"><a href="javascript:void(0);" id='confirmBtn' class="create-com">关闭活动</a></div>
 						<div id="info"></div>
 					</div>		
 				</div>
