--- a/artist-add.html
+++ b/artist-add.html
@@ -54,7 +54,7 @@
 				 			<div class="w-text">
 				 				<div class="imgload">
 								    <div class="imgview  adDWXBgIMG  margin-top-20">
-								        <span><img id="img" src="images/cross.png"></span>
+								        <span class="mui-icon mui-icon-camera"></span>
 								    </div>
 								    <div id="error" class="help-block text-center"></div>
 								    <div class="btn-box margin-top-20">
